--- a/master.cfg
+++ b/master.cfg
@@ -114,3 +114,6 @@ c['db'] = {
     # this at its default for all but the largest installations.
     'db_url' : os.environ.get("BUILDBOT_DB_URL", "sqlite://").format(**os.environ),
 }
+c['services'].append(reporters.IRC(host="irc.freenode.net", nick="bbtest",
+                                   channels=["#bb-test-cebash"]))
+
