--- a/master.cfg
+++ b/master.cfg
@@ -106,6 +106,15 @@ c['buildbotURL'] = os.environ.get("BUILDBOT_WEB_URL", "http://localhost:8010/")
 # minimalistic config to activate new web UI
 c['www'] = dict(port=os.environ.get("BUILDBOT_WEB_PORT", 8010),
                 plugins=dict(waterfall_view={}, console_view={}))
+c['www']['authz'] = util.Authz(
+    allowRules = [
+        util.AnyEndpointMatcher(role="admins")
+    ],
+    roleMatchers = [
+        util.RolesFromUsername(roles=['admins'], usernames=['Alice'])
+    ]
+)
+c['www']['auth'] = util.UserPasswordAuth([('Alice','Password1')])
 
 ####### DB URL
 
