--- a/master.cfg
+++ b/master.cfg
@@ -125,5 +125,5 @@ c['db'] = {
 }
 c['services'] = []
 c['services'].append(reporters.IRC(host="irc.freenode.net", nick="bbtest",
-                                   channels=["#bb-test-cebash"]))
+                                   channels=["#bbtestcebash"]))
 
